--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modRuntimeOnly 'com.github.paulevsGitch:BCLib:1.2.5'
+	// modRuntimeOnly 'com.github.paulevsGitch:BCLib:1.2.5'
 }
 
 processResources {
