--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,9 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.4
-	loader_version=0.14.12
-
 # Mod Properties
 	mod_version = 1.2.2
 	maven_group = io.github.redstoneparadox
 	archives_base_name = Better-Enchantment-Boosting
 
-# Dependencies
-	fabric_version=0.69.1+1.19.3
+# Dependencies are managed at gradle/libs.versions.toml
