--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ group = project.maven_group
 repositories {
 	maven {
 		name = 'Quilt'
-		url = 'https://maven.quiltmc.org/repository/release'
+		url = 'https://maven.quiltmc.org/repository/release/'
 	}
 	// maven { url 'https://jitpack.io' }
 }
