--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,17 @@ group = project.maven_group
 
 repositories {
 	maven { url 'https://jitpack.io' }
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
 }
 
 dependencies {
@@ -22,6 +33,7 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	// modRuntimeOnly 'com.github.paulevsGitch:BCLib:1.2.5'
+	modCompileOnly "maven.modrinth:easy-magic:v4.3.3-1.19.2-Fabric"
 }
 
 processResources {
