--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,4 @@ pluginManagement {
         gradlePluginPortal()
     }
 }
-enableFeaturePreview("VERSION_CATALOGS")
+// enableFeaturePreview("VERSION_CATALOGS")
