--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.20-rc1"
-quilt_mappings = "1.20-rc1+build.5"
-quilt_loader = "0.19.0-beta.18"
+minecraft = "1.20.1"
+quilt_mappings = "1.20.1+build.1"
+quilt_loader = "0.19.0"
 quilt_config = "1.1.0-beta.1"
 
 quilted_fabric_api = "5.0.0-alpha.8+0.71.0-1.19.3"
-quilt_standard_libraries = "6.0.0-alpha.6+1.20-rc1"
+quilt_standard_libraries = "6.0.3+1.20.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
