--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,26 @@ repositories {
 		name = 'Quilt'
 		url = 'https://maven.quiltmc.org/repository/release/'
 	}
-	// maven { url 'https://jitpack.io' }
+	maven { url 'https://jitpack.io' }
+	maven {
+		name = "Ladysnake Mods"
+		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+	}
+	maven {
+		name = "Terraformers"
+		url = "https://maven.terraformersmc.com/"
+	}
+	exclusiveContent {
+		forRepository {
+			maven {
+				name = "Modrinth"
+				url = "https://api.modrinth.com/maven"
+			}
+		}
+		filter {
+			includeGroup "maven.modrinth"
+		}
+	}
 }
 
 dependencies {
@@ -32,6 +51,25 @@ dependencies {
 	modImplementation libs.quilt.standard.libraries
 	// modImplementation libs.quilted.fabric.api
 	// modImplementation libs.bundles.quilted.fabric.api // If you wish to use Fabric API's deprecated modules, you can replace the above line with this one
+
+	// All this to verify that a single mixin to easy magic would work
+	modCompileOnly "maven.modrinth:easy-magic:v7.0.0-1.20-Fabric"
+	modCompileOnly "maven.modrinth:forge-config-api-port:v8.0.0-1.20.1-Fabric"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.1"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.1"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-block:5.2.1"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
+	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
+
+	// modRuntimeOnly "maven.modrinth:easy-magic:v7.0.0-1.20-Fabric"
+	// modRuntimeOnly "maven.modrinth:puzzles-lib:v7.0.3-1.20-Fabric"
+	// modRuntimeOnly "maven.modrinth:forge-config-api-port:v8.0.0-1.20.1-Fabric"
+	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.1"
+	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.1"
+	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-block:5.2.1"
+	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
+	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
+	// modRuntimeOnly "com.terraformersmc:modmenu:7.0.1"
 }
 
 processResources {
