--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ repositories {
 	}
 }
 
+loom {
+	accessWidenerPath = file("src/main/resources/betterenchantmentboosting.accesswidener")
+}
+
 dependencies {
 	minecraft libs.minecraft
 	mappings variantOf(libs.quilt.mappings) { classifier 'intermediary-v2' }
@@ -49,27 +53,23 @@ dependencies {
 	// QSL is not a complete API; You will need Quilted Fabric API to fill in the gaps.
 	// Quilted Fabric API will automatically pull in the correct QSL version.
 	modImplementation libs.quilt.standard.libraries
-	// modImplementation libs.quilted.fabric.api
+	modImplementation libs.quilted.fabric.api
 	// modImplementation libs.bundles.quilted.fabric.api // If you wish to use Fabric API's deprecated modules, you can replace the above line with this one
 
 	// All this to verify that a single mixin to easy magic would work
 	modCompileOnly "maven.modrinth:easy-magic:v7.0.0-1.20-Fabric"
-	modCompileOnly "maven.modrinth:forge-config-api-port:v8.0.0-1.20.1-Fabric"
-	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.1"
-	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.1"
-	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-block:5.2.1"
-	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
-	modCompileOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
+	modCompileOnly "maven.modrinth:puzzles-lib:v7.0.3-1.20-Fabric"
+	modCompileOnly "maven.modrinth:forge-config-api-port:v7.0.0-1.20-Fabric"
 
-	// modRuntimeOnly "maven.modrinth:easy-magic:v7.0.0-1.20-Fabric"
-	// modRuntimeOnly "maven.modrinth:puzzles-lib:v7.0.3-1.20-Fabric"
-	// modRuntimeOnly "maven.modrinth:forge-config-api-port:v8.0.0-1.20.1-Fabric"
-	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.1"
-	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.1"
-	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-block:5.2.1"
-	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
-	// modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
-	// modRuntimeOnly "com.terraformersmc:modmenu:7.0.1"
+	modRuntimeOnly "maven.modrinth:easy-magic:v7.0.0-1.20-Fabric"
+	modRuntimeOnly "maven.modrinth:puzzles-lib:v7.0.3-1.20-Fabric"
+	modRuntimeOnly "maven.modrinth:forge-config-api-port:v7.0.0-1.20-Fabric"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-base:5.2.1"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:5.2.1"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-block:5.2.1"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
+	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
+	modRuntimeOnly "com.terraformersmc:modmenu:7.0.1"
 }
 
 processResources {
