--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
-	mod_version = 1.3.0
+	version = 1.3.0
 	maven_group = io.github.redstoneparadox
 	archives_base_name = Better-Enchantment-Boosting
 
