--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 	maven { url 'https://jitpack.io' }
 	maven {
 		name = "Ladysnake Mods"
-		url = 'https://ladysnake.jfrog.io/artifactory/mods'
+		url = 'https://maven.ladysnake.org/releases'
 	}
 	maven {
 		name = "Terraformers"
@@ -70,6 +70,8 @@ dependencies {
 	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-chunk:5.2.1"
 	modRuntimeOnly "dev.onyxstudios.cardinal-components-api:cardinal-components-world:5.2.1"
 	modRuntimeOnly "com.terraformersmc:modmenu:7.0.1"
+	modRuntimeOnly "com.terraformersmc.terraform-api:terraform-wood-api-v1:7.0.1"
+	modRuntimeOnly "maven.modrinth:aurorasdecorations:1.0.0-beta.21+1.20.1"
 }
 
 processResources {
