--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.20"
-quilt_mappings = "1.20+build.4"
-quilt_loader = "0.19.0"
+minecraft = "1.20.1"
+quilt_mappings = "1.20.1+build.23"
+quilt_loader = "0.20.0-beta.14"
 quilt_config = "1.1.0-beta.1"
 
-quilted_fabric_api = "7.0.1+0.83.0-1.20"
-quilt_standard_libraries = "6.0.1+1.20"
+quilted_fabric_api = "7.1.2+0.87.0-1.20.1"
+quilt_standard_libraries = "6.1.1+1.20.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
