--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 	modRuntimeOnly "com.terraformersmc:modmenu:7.0.1"
 	modRuntimeOnly "com.terraformersmc.terraform-api:terraform-wood-api-v1:7.0.1"
 	modRuntimeOnly "maven.modrinth:aurorasdecorations:1.0.0-beta.21+1.20.1"
+	// modRuntimeOnly "maven.modrinth:templates-2:2.1.1-fabric-1.20.1"
 }
 
 processResources {
