--- a/build.gradle
+++ b/build.gradle
@@ -114,14 +114,21 @@ publishing {
 	publications {
 		mavenJava(MavenPublication) {
 			from components.java
+			groupId = group
+			artifactId = archivesBaseName
+			version = project.version
 		}
 	}
 
 	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
 	repositories {
-		// Add repositories to publish to here.
-		// Notice: This block does NOT have the same function as the block in the top level.
-		// The repositories here will be used for publishing your artifact, not for
-		// retrieving dependencies.
+		def env = System.getenv()
+		maven {
+			url = "https://maven.redstoneparadox.xyz/releases"
+			credentials {
+				username = env.MAVEN_USER_RP
+				password = env.MAVEN_PASSWORD_RP
+			}
+		}
 	}
 }
